        be used for receive operations.
      * WINDIVERT_FLAG_NO_INSTALL: If the WinDivert driver is not already
        installed/loaded, then WinDivertOpen() will fail with an error.
    - WinDivertRecvEx()/WinDivertSendEx() now support a "batch" mode that
      allows more than one packet to be received/sent at once.  The number
      of packets is determined by a new pAddrLen/addrLen parameter.
    - Add a new WinDivertShutdown() function that supports the following
      modes:
      * WINDIVERT_SHUTDOWN_RECV: Disable the queuing new packets.
      * WINDIVERT_SHUTDOWN_SEND: Disable the sending of new packets.
      * WINDIVERT_SHUTDOWN_BOTH: Equivalent to
        (WINDIVERT_SHUTDOWN_RECV | WINDIVERT_SHUTDOWN_SEND).
    - Add new "read-only" WinDivert parameters:
      * WINDIVERT_PARAM_VERSION_MAJOR: Driver version (major).
      * WINDIVERT_PARAM_VERSION_MINOR: Driver version (minor).
    - Add a new WinDivertHelperHashPacket() helper function that calculates
      a 64bit hash value of a packet.
    - Add new WinDivertHelperFormatIPv4Address() and
      WinDivertHelperFormatIPv6Address() helper functions that format
      IPv4 and IPv6 addresses respectively.
    - Replace WinDivertHelperCheckFilter() with a new
      WinDivertHelperCompileFilter() helper function.  The latter can also be
      used to compile a human-readable filter string into a more compact
      "object" format.  The object format can be used in place of the
      human readable format for all WinDivert operations.
    - Add a new WinDivertHelperFormatFilter() helper function that formats a
      filter string into a normalized form.  It also can be used to
      "de-compile" the object format into a human readable form.
    - Add a new WinDivertHelperDecrementTTL() function that decrements the
      ip.TTL/ipv6.HopLimit field of a packet.
    - Add new WinDivertHelperNto*()/WinDivertHelperHton*() helper functions
      for swapping from network to host byte ordering, and vice versa.