@@ -300,8 +300,8 @@ extern WINDIVERTEXPORT BOOL WinDivertGetParam(
 /*
  * WinDivert constants.
  */
-#define WINDIVERT_PRIORITY_LOWEST               30000
-#define WINDIVERT_PRIORITY_HIGHEST              (-WINDIVERT_PRIORITY_LOWEST)
+#define WINDIVERT_PRIORITY_HIGHEST              30000
+#define WINDIVERT_PRIORITY_LOWEST               (-WINDIVERT_PRIORITY_HIGHEST)
 #define WINDIVERT_PARAM_QUEUE_LENGTH_DEFAULT    4096
 #define WINDIVERT_PARAM_QUEUE_LENGTH_MIN        32
 #define WINDIVERT_PARAM_QUEUE_LENGTH_MAX        16384
